2011-02-21  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-update-date-headers): Doc fix.
	(gnus-article-setup-buffer): Always restart the date timer so that user
	changes to the frequency is respected.

	* nnimap.el (nnimap-open-connection-1): auth-source expects strings as
	port numbers, so make sure it gets that if nnimap-server-port is
	explicit.

2011-02-21  Simon Josefsson  <simon@josefsson.org>

	* nnimap.el (nnimap-inbox): Doc fix.

2011-02-21  Chong Yidong  <cyd@stupidchicken.com>

	* color.el (color-name-to-rgb): Rename from color-rgb->normalize.
	Autoload.  Add optional arg FRAME, and pass it to color-values.
	(color-complement): Caller changed.  Doc fix.
	(color-gradient): Rewrite for better clarity and efficiency.

2011-02-20  Chong Yidong  <cyd@stupidchicken.com>

	* shr-color.el (shr-color->hexadecimal): Use renamed function names
	color-rgb-to-hex, color-name-to-rgb, color-srgb-to-lab, and
	color-lab-to-srgb.

2011-02-20  Drew Adams  <drew.adams@oracle.com>

	* color.el: First part of merge from hexrgb.el.
	(color-rgb-to-hex): Rename from color-rgb->hex.
	(color-rgb-to-hsv): Rename from color-rgb->hsv.  Force hue and
	saturation to zero if the value is too small.
	(color-rgb-to-hsl): Rename from color-rgb->hsl.
	(color-srgb-to-xyz): Rename from color-srgb->xyz.  Doc fix.
	(color-xyz-to-srgb): Rename from color-xyz->srgb.  Doc fix.
	(color-xyz-to-lab): Rename from color-xyz->lab.  Doc fix.
	(color-lab-to-xyz): Rename from color-lab->xyz.  Doc fix.
	(color-lab-to-srgb): Rename from color-lab->srgb.  Doc fix.
	(color-cie-de2000): Doc fix.

2011-02-21  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-finish-retrieve-group-infos): Add a kludge to use the
	given method as in the group name if we're using an extended method.
	(nntp-finish-retrieve-group-infos): Wait for the end of the LIST ACTIVE
	command, if we're using that, instead of waiting for the beginning.
